Bug 257179 - [macOS] WebProcess names in Activity Monitor cannot include non-Latin1 characters
Summary: [macOS] WebProcess names in Activity Monitor cannot include non-Latin1 charac...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-22 19:30 PDT by Chris Dumez
Modified: 2023-05-22 21:22 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-05-22 19:30:45 PDT
WebProcess names in Activity Monitor cannot include non-Latin1 characters.
Comment 1 Chris Dumez 2023-05-22 19:30:53 PDT
<rdar://109691473>
Comment 2 Chris Dumez 2023-05-22 19:34:49 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14226
Comment 3 EWS 2023-05-22 21:22:31 PDT
Committed 264403@main (c452365a271a): <https://commits.webkit.org/264403@main>

Reviewed commits have been landed. Closing PR #14226 and removing active labels.