[macOS] WebProcess names in Activity Monitor cannot include non-Latin1 characters https://bugs.webkit.org/show_bug.cgi?id=257179 rdar://109691473

Reviewed by Alex Christensen.

We are sending the application name as UTF-8 over XPC like so:
```
xpc_dictionary_set_string(bootstrapMessage.get(), "ui-process-name", [[[NSProcessInfo processInfo] processName] UTF8String]);
```

But we were decoding it as Latin1 instead of UTF-8 on the recipient side. This
was the cause of the bug.

* Source/WebKit/Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.mm:
(WebKit::XPCServiceInitializerDelegate::getClientProcessName):

Canonical link: https://commits.webkit.org/264403@main